# imgproc

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: bmp.hh  bmp_averager.hh  globals.cpp  globals.hh  grid.hh  hash_impl.hpp  main.cpp  point.cpp  point.hh  procargs.cpp  procargs.hh  px.cpp  px.hh  tags.cpp  tags.hh  user_interactive.cpp  user_interactive.hh  utils.cpp  utils.hh  worker_thread.cpp  worker_thread.hh
tests/: test_hash.cpp  test_main.cpp
